[project]
name = "cdn-request-demo"
version = "0.1.0"
description = "FastAPI demo: ETags, caching, and Kubernetes health probes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
serve = "main:app"

[dependency-groups]
dev = ["httpx>=0.27"]
